--- a/apps/hana_shirabe/priv/gettext/zh_Hans/LC_MESSAGES/deliver.po
+++ b/apps/hana_shirabe/priv/gettext/zh_Hans/LC_MESSAGES/deliver.po
@@ -12,16 +12,67 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 #: lib/hana_shirabe/accounts/member_notifier.ex:37
-#, elixir-autogen, elixir-format, fuzzy
+#, elixir-autogen, elixir-format
 msgid "\r\n==============================\r\n\r\nHi %{member_email},\r\n\r\nYou can change your email by visiting the URL below:\r\n\r\n%{url}\r\n\r\nIf you didn't request this change, please ignore this.\r\n\r\n==============================\r\n"
-msgstr ""
+msgstr "\r\n"
+"=============================="
+"\r\n"
+"\r\n"
+"< %{member_email} >："
+"\r\n"
+"\r\n"
+"您好！"
+"\r\n"
+"    现在您可以用过以下链接修改您的邮件："
+"\r\n"
+"\r\n"
+"%{url}"
+"\r\n"
+"\r\n"
+"    如果不是您本人操作，请忽略。"
+"\r\n"
+"\r\n==============================\r\n"
 
 #: lib/hana_shirabe/accounts/member_notifier.ex:99
-#, elixir-autogen, elixir-format, fuzzy
+#, elixir-autogen, elixir-format
 msgid "\r\n==============================\r\n\r\nHi %{member_email},\r\n\r\nYou can confirm your account by visiting the URL below:\r\n\r\n%{url}\r\n\r\nIf you didn't create an account with us, please ignore this.\r\n\r\n==============================\r\n"
-msgstr ""
+msgstr "\r\n"
+"=============================="
+"\r\n"
+"\r\n"
+"< %{member_email} >："
+"\r\n"
+"\r\n"
+"您好！"
+"\r\n"
+"    您现在可以通过访问以下链接确认账号归您本人所有："
+"\r\n"
+"\r\n"
+"%{url}"
+"\r\n"
+"\r\n"
+"    如果不是您本人操作，请忽略。"
+"\r\n"
+"\r\n==============================\r\n"
 
 #: lib/hana_shirabe/accounts/member_notifier.ex:73
-#, elixir-autogen, elixir-format, fuzzy
+#, elixir-autogen, elixir-format
 msgid "\r\n==============================\r\n\r\nHi %{member_email},\r\n\r\nYou can log into your account by visiting the URL below:\r\n\r\n%{url}\r\n\r\nIf you didn't request this email, please ignore this.\r\n\r\n==============================\r\n"
-msgstr ""
+msgstr "\r\n"
+"=============================="
+"\r\n"
+"\r\n"
+"< %{member_email} >："
+"\r\n"
+"\r\n"
+"您好！"
+"\r\n"
+"    您现在可以通过访问以下链接登录您的账号："
+"\r\n"
+"\r\n"
+"%{url}"
+"\r\n"
+"\r\n"
+"    如果不是您本人操作，请忽略。"
+"\r\n"
+"\r\n==============================\r\n"
