feat(settings): Add user profile settings page
This commit introduces the user profile settings page, allowing authenticated users to update their non-sensitive information like nickname, preferred locale, and introduction.

A new route `GET /settings/profile` is added, along with the corresponding controller, view, and template to render the settings form. A new `update_settings_changeset` function is created in the `Accounts.Member` schema to validate the submitted data.

Additionally, this commit introduces:
- A new, custom dark theme named "noctilucent", replacing the previous one.
- New audit log events (`member.update`, `member.update_attempt`) in preparation for tracking profile updates.

The backend logic for handling the form submission (POST request) is stubbed and will be implemented in a subsequent commit.

--- a/apps/hana_shirabe_web/priv/gettext/zh_Hans/LC_MESSAGES/default.po
+++ b/apps/hana_shirabe_web/priv/gettext/zh_Hans/LC_MESSAGES/default.po
@@ -67,4 +67,4 @@ msgstr "施工中..."
 #: lib/hana_shirabe_web/controllers/page_html/home.html.heex:5
 #, elixir-autogen, elixir-format
 msgid "Welcome to %{site_name}"
-msgstr "欢迎来到%{site_name}"
+msgstr "欢迎来到「%{site_name}」"
