refactor(accounts): Decouple schema validations from gettext
Removes explicit `dgettext/2` calls from the validation messages within the `HanaShirabe.Accounts.Member` schema.

This change decouples the core `Accounts` context from presentation-layer concerns like internationalization. The context should not be responsible for translating its own error messages. Instead, we now rely on the standard Phoenix behavior of translating changeset errors at the view/template level, which improves separation of concerns.

Additionally, the `require_authenticated_member` plug function was renamed to `require_authenticated` for better clarity in the router.

--- a/apps/hana_shirabe_web/priv/gettext/ja/LC_MESSAGES/errors.po
+++ b/apps/hana_shirabe_web/priv/gettext/ja/LC_MESSAGES/errors.po
@@ -91,3 +91,19 @@ msgstr ""
 
 msgid "must be equal to %{number}"
 msgstr ""
+
+## From HanaShirabe.Accounts.Member.validate_email/2
+msgid "must have the @ sign and no spaces"
+msgstr ""
+
+## From HanaShirabe.Accounts.Member.validate_email_changed/1
+msgid "did not change"
+msgstr ""
+
+## From HanaShirabe.Accounts.Member.password_changeset/3
+msgid "does not match password"
+msgstr ""
+
+## From HanaShirabe.Accounts.Member.validate_prefer_locale/1
+msgid "unknown locale"
+msgstr ""
