--- a/apps/hana_shirabe/priv/gettext/zh_Hans/LC_MESSAGES/deliver.po
+++ b/apps/hana_shirabe/priv/gettext/zh_Hans/LC_MESSAGES/deliver.po
@@ -47,6 +47,23 @@ msgid ""
 "==============================\n"
 ""
 msgstr ""
+"==============================\n"
+"\n"
+"您好，%{member_email}，\n"
+"\n"
+"欢迎来到「花影下的音符」。\n"
+"\n"
+"请使用以下验证码来更改您的邮箱地址：\n"
+"\n"
+"%{code}\n"
+"\n"
+"或者，您也可以通过访问下方链接进行操作：\n"
+"\n"
+"%{url}\n"
+"\n"
+"此请求在 15 分钟内有效。如果您并未请求此操作，请忽略本邮件。\n"
+"==============================\n"
+""
 
 #: lib/hana_shirabe/accounts/member_notifier.ex:79
 #, elixir-autogen, elixir-format
@@ -70,6 +87,24 @@ msgid ""
 "==============================\n"
 ""
 msgstr ""
+"==============================\n"
+"\n"
+"您好，%{member_email}，\n"
+"\n"
+"欢迎来到「花影下的音符」。\n"
+"\n"
+"请使用以下验证码完成您的登录：\n"
+"\n"
+"%{code}\n"
+"\n"
+"或者，您也可以通过访问下方链接登录：\n"
+"\n"
+"%{url}\n"
+"\n"
+"此请求在 15 分钟内有效。如果您并未请求登录，请忽略本邮件。\n"
+"\n"
+"==============================\n"
+""
 
 #: lib/hana_shirabe/accounts/member_notifier.ex:113
 #, elixir-autogen, elixir-format
@@ -89,3 +124,17 @@ msgid ""
 "==============================\n"
 ""
 msgstr ""
+"==============================\n"
+"\n"
+"您好，%{member_email}，\n"
+"\n"
+"欢迎来到「花影下的音符」。\n"
+"\n"
+"请访问下方的链接以完成操作：\n"
+"\n"
+"%{url}\n"
+"\n"
+"此请求在 15 分钟内有效。如果您并未请求此操作，请忽略本邮件。\n"
+"\n"
+"==============================\n"
+""
