feat(alert): add success alert variant with icon and update link handling
- Added support for `success` alert kind in `CoreComponents.alert` with corresponding icon and styling
- Updated alert classes to use `alert-soft` for consistent styling
- Fixed mailer config lookup by correcting app name from `hana_shirabe_web` to `hana_shirabe`
- Updated translation key to include period at end for proper sentence formatting across all locales
- Ensured proper HTML safety in link rendering by converting output to iodata

--- a/apps/hana_shirabe_web/priv/gettext/account.pot
+++ b/apps/hana_shirabe_web/priv/gettext/account.pot
@@ -336,5 +336,5 @@ msgstr ""
 
 #: lib/hana_shirabe_web/live/member_live/login.ex:132
 #, elixir-autogen, elixir-format
-msgid "the mailbox page"
+msgid "the mailbox page."
 msgstr ""
