--- a/apps/hana_shirabe_web/priv/gettext/zh_Hans/LC_MESSAGES/account.po
+++ b/apps/hana_shirabe_web/priv/gettext/zh_Hans/LC_MESSAGES/account.po
@@ -336,5 +336,5 @@ msgstr "您可以使用链接去确认并登录您的账号。"
 
 #: lib/hana_shirabe_web/live/member_live/login.ex:132
 #, elixir-autogen, elixir-format
-msgid "the mailbox page"
+msgid "the mailbox page."
 msgstr "邮箱页（私人版）"
