feat: add Japanese translate; fix: correct typo in danger zone label and simplify email placeholder text
- Fixed typo in "Dangerours Zone" to "Danger Zone" in profile live view
- Simplified email placeholder text from "Please enter your email address so we can contact you" to "Please enter your email"
- Updated corresponding gettext translation files including Japanese translations for various UI strings
- Ensured consistency across POT template and localized message catalogs

--- a/apps/hana_shirabe_web/priv/gettext/account.pot
+++ b/apps/hana_shirabe_web/priv/gettext/account.pot
@@ -276,7 +276,7 @@ msgstr ""
 
 #: lib/hana_shirabe_web/live/member_live/registration.ex:103
 #, elixir-autogen, elixir-format
-msgid "Please enter your email address so we can contact you."
+msgid "Please enter your email so we can contact you."
 msgstr ""
 
 #: lib/hana_shirabe_web/live/member_live/profile.ex:15
@@ -291,7 +291,7 @@ msgstr ""
 
 #: lib/hana_shirabe_web/live/member_live/profile.ex:52
 #, elixir-autogen, elixir-format
-msgid "Dangerours Zone"
+msgid "Danger Zone"
 msgstr ""
 
 #: lib/hana_shirabe_web/live/member_live/profile.ex:55
