--- a/apps/hana_shirabe_web/priv/gettext/ja/LC_MESSAGES/account.po
+++ b/apps/hana_shirabe_web/priv/gettext/ja/LC_MESSAGES/account.po
@@ -14,119 +14,119 @@ msgstr ""
 #: lib/hana_shirabe_web/live/member_live/registration.ex:212
 #, elixir-autogen, elixir-format
 msgid "An email was sent to %{member_email}, please access it to confirm your account."
-msgstr ""
+msgstr "%{member_email} にメールを送信しました。アカウント確認のためご確認ください。"
 
 #: lib/hana_shirabe_web/live/member_live/registration.ex:111
 #, elixir-autogen, elixir-format
 msgid "Create an account"
-msgstr ""
+msgstr "アカウント作成"
 
 #: lib/hana_shirabe_web/live/member_live/login.ex:169
 #, elixir-autogen, elixir-format
 msgid "If your email is in our system, you will receive instructions for logging in shortly."
-msgstr ""
+msgstr "登録済みのメールアドレスの場合、まもなくログイン手順をお送りします。"
 
 #: lib/hana_shirabe_web/live/member_live/login.ex:108
 #, elixir-autogen, elixir-format
 msgid "Log in and stay logged in"
-msgstr ""
+msgstr "ログイン状態を維持する"
 
 #: lib/hana_shirabe_web/live/member_live/login.ex:111
 #, elixir-autogen, elixir-format
 msgid "Log in only this time"
-msgstr ""
+msgstr "今回のみログイン"
 
 #: lib/hana_shirabe_web/live/member_live/registration.ex:23
 #, elixir-autogen, elixir-format
 msgid "Register for an account"
-msgstr ""
+msgstr "アカウント登録"
 
 #: lib/hana_shirabe_web/live/member_live/login.ex:34
 #, elixir-autogen, elixir-format
 msgid "You are running the local mail adapter."
-msgstr ""
+msgstr "ローカルメールアダプターを使用中です。"
 
 #: lib/hana_shirabe_web/live/member_live/login.ex:17
 #, elixir-autogen, elixir-format
 msgid "You need to reauthenticate to perform sensitive actions on your account."
-msgstr ""
+msgstr "アカウントの重要な操作を行うには再認証が必要です。"
 
 #: lib/hana_shirabe_web/controllers/member_session_controller.ex:93
 #, elixir-autogen, elixir-format
 msgid "Invalid email or password"
-msgstr ""
+msgstr "メールアドレスまたはパスワードが正しくありません"
 
 #: lib/hana_shirabe_web/controllers/member_session_controller.ex:119
 #, elixir-autogen, elixir-format
 msgid "Logged out successfully."
-msgstr ""
+msgstr "ログアウトしました"
 
 #: lib/hana_shirabe_web/controllers/member_session_controller.ex:8
 #, elixir-autogen, elixir-format
 msgid "Member confirmed successfully."
-msgstr ""
+msgstr "メンバー確認が完了しました"
 
 #: lib/hana_shirabe_web/controllers/member_session_controller.ex:108
 #, elixir-autogen, elixir-format
 msgid "Password updated successfully."
-msgstr ""
+msgstr "パスワードを更新しました"
 
 #: lib/hana_shirabe_web/controllers/member_session_controller.ex:32
 #, elixir-autogen, elixir-format
 msgid "The link is invalid or it has expired."
-msgstr ""
+msgstr "リンクが無効または期限切れです"
 
 #: lib/hana_shirabe_web/controllers/member_session_controller.ex:14
 #, elixir-autogen, elixir-format
 msgid "Welcome back!"
-msgstr ""
+msgstr "おかえりなさい！"
 
 #: lib/hana_shirabe_web/live/member_live/sensitive_settings.ex:133
 #, elixir-autogen, elixir-format
 msgid "A link to confirm your email change has been sent to the new address."
-msgstr ""
+msgstr "メールアドレス変更確認のリンクを新しいアドレスに送信しました"
 
 #: lib/hana_shirabe_web/live/member_live/profile.ex:74
 #: lib/hana_shirabe_web/live/member_live/sensitive_settings.ex:15
 #, elixir-autogen, elixir-format
 msgid "Account Sensitive Settings"
-msgstr ""
+msgstr "アカウント重要設定"
 
 #: lib/hana_shirabe_web/live/member_live/registration.ex:25
 #, elixir-autogen, elixir-format
 msgid "Already registered? %{login_link} to your account now."
-msgstr ""
+msgstr "既に登録済みですか？%{login_link}"
 
 #: lib/hana_shirabe_web/live/member_live/sensitive_settings.ex:31
 #, elixir-autogen, elixir-format
 msgid "Change Email"
-msgstr ""
+msgstr "メールアドレス変更"
 
 #: lib/hana_shirabe_web/live/member_live/sensitive_settings.ex:30
 #, elixir-autogen, elixir-format
 msgid "Changing..."
-msgstr ""
+msgstr "変更中..."
 
 #: lib/hana_shirabe_web/live/member_live/confirmation.ex:39
 #, elixir-autogen, elixir-format
 msgid "Confirm and log in only this time"
-msgstr ""
+msgstr "確認して今回のみログイン"
 
 #: lib/hana_shirabe_web/live/member_live/confirmation.ex:33
 #, elixir-autogen, elixir-format
 msgid "Confirm and stay logged in"
-msgstr ""
+msgstr "確認してログイン状態を維持"
 
 #: lib/hana_shirabe_web/live/member_live/sensitive_settings.ex:61
 #, elixir-autogen, elixir-format
 msgid "Confirm new password"
-msgstr ""
+msgstr "新しいパスワード（確認）"
 
 #: lib/hana_shirabe_web/live/member_live/confirmation.ex:30
 #: lib/hana_shirabe_web/live/member_live/confirmation.ex:36
 #, elixir-autogen, elixir-format
 msgid "Confirming..."
-msgstr ""
+msgstr "確認中..."
 
 #: lib/hana_shirabe_web/live/member_live/login.ex:57
 #: lib/hana_shirabe_web/live/member_live/login.ex:97
@@ -134,22 +134,22 @@ msgstr ""
 #: lib/hana_shirabe_web/live/member_live/sensitive_settings.ex:26
 #, elixir-autogen, elixir-format
 msgid "Email"
-msgstr ""
+msgstr "メールアドレス"
 
 #: lib/hana_shirabe_web/live/member_live/sensitive_settings.ex:83
 #, elixir-autogen, elixir-format
 msgid "Email change link is invalid or it has expired."
-msgstr ""
+msgstr "メールアドレス変更リンクが無効または期限切れです"
 
 #: lib/hana_shirabe_web/live/member_live/sensitive_settings.ex:78
 #, elixir-autogen, elixir-format
 msgid "Email changed successfully."
-msgstr ""
+msgstr "メールアドレスを変更しました"
 
 #: lib/hana_shirabe_web/live/member_live/confirmation.ex:67
 #, elixir-autogen, elixir-format
 msgid "Keep me logged in on this device"
-msgstr ""
+msgstr "この端末でログイン状態を維持する"
 
 #: lib/hana_shirabe_web/components/layouts.ex:86
 #: lib/hana_shirabe_web/live/member_live/confirmation.ex:58
@@ -157,184 +157,184 @@ msgstr ""
 #: lib/hana_shirabe_web/live/member_live/registration.ex:129
 #, elixir-autogen, elixir-format
 msgid "Log in"
-msgstr ""
+msgstr "ログイン"
 
 #: lib/hana_shirabe_web/live/member_live/confirmation.ex:70
 #, elixir-autogen, elixir-format
 msgid "Log me in only this time"
-msgstr ""
+msgstr "今回のみログイン"
 
 #: lib/hana_shirabe_web/live/member_live/confirmation.ex:55
 #: lib/hana_shirabe_web/live/member_live/confirmation.ex:64
 #, elixir-autogen, elixir-format
 msgid "Logging in..."
-msgstr ""
+msgstr "ログイン中..."
 
 #: lib/hana_shirabe_web/live/member_live/confirmation.ex:94
 #: lib/hana_shirabe_web/live/member_live/confirmation.ex:114
 #: lib/hana_shirabe_web/live/member_live/login.ex:201
 #, elixir-autogen, elixir-format
 msgid "Magic link is invalid or it has expired."
-msgstr ""
+msgstr "マジックリンクが無効または期限切れです"
 
 #: lib/hana_shirabe_web/live/member_live/sensitive_settings.ex:17
 #, elixir-autogen, elixir-format
 msgid "Manage your account email address and password settings"
-msgstr ""
+msgstr "アカウントのメールアドレスとパスワード設定を管理"
 
 #: lib/hana_shirabe_web/live/member_live/sensitive_settings.ex:54
 #, elixir-autogen, elixir-format
 msgid "New password"
-msgstr ""
+msgstr "新しいパスワード"
 
 #: lib/hana_shirabe_web/live/member_live/sensitive_settings.ex:65
 #, elixir-autogen, elixir-format
 msgid "Save Password"
-msgstr ""
+msgstr "パスワードを保存"
 
 #: lib/hana_shirabe_web/live/member_live/confirmation.ex:76
 #, elixir-autogen, elixir-format
 msgid "Tip: If you prefer passwords, you can enable them in the member settings."
-msgstr ""
+msgstr "ヒント：パスワードをご希望の場合は、メンバー設定で有効にできます"
 
 #: lib/hana_shirabe_web/live/member_live/confirmation.ex:13
 #, elixir-autogen, elixir-format
 msgid "Welcome %{member_nickname}"
-msgstr ""
+msgstr "ようこそ %{member_nickname} さん"
 
 #: lib/hana_shirabe_web/live/member_live/registration.ex:108
 #, elixir-autogen, elixir-format
 msgid "Creating account..."
-msgstr ""
+msgstr "アカウント作成中..."
 
 #: lib/hana_shirabe_web/live/member_live/login.ex:22
 #, elixir-autogen, elixir-format
 msgid "Don't have an account? %{sign_up_link} for an account now."
-msgstr ""
+msgstr "アカウントをお持ちでないですか？%{sign_up_link}"
 
 #: lib/hana_shirabe_web/live/member_live/login.ex:77
 #, elixir-autogen, elixir-format
 msgid "Log in with email"
-msgstr ""
+msgstr "メールアドレスでログイン"
 
 #: lib/hana_shirabe_web/components/layouts.ex:69
 #, elixir-autogen, elixir-format
 msgid "Log out"
-msgstr ""
+msgstr "ログアウト"
 
 #: lib/hana_shirabe_web/live/member_live/login.ex:104
 #, elixir-autogen, elixir-format
 msgid "Password"
-msgstr ""
+msgstr "パスワード"
 
 #: lib/hana_shirabe_web/components/layouts.ex:78
 #, elixir-autogen, elixir-format
 msgid "Register"
-msgstr ""
+msgstr "登録"
 
 #: lib/hana_shirabe_web/components/layouts.ex:60
 #, elixir-autogen, elixir-format
 msgid "Profile"
-msgstr ""
+msgstr "プロフィール"
 
 #: lib/hana_shirabe_web/live/member_live/login.ex:125
 #, elixir-autogen, elixir-format
 msgid "Sign up"
-msgstr ""
+msgstr "サインアップ"
 
 #: lib/hana_shirabe_web/live/member_live/login.ex:37
 #, elixir-autogen, elixir-format
 msgid "To see sent emails, visit %{email_page}."
-msgstr ""
+msgstr "送信されたメールを確認するには、%{email_page} にアクセスしてください。"
 
 #: lib/hana_shirabe_web/live/member_live/login.ex:83
 #, elixir-autogen, elixir-format
 msgid "or"
-msgstr ""
+msgstr "または"
 
 #: lib/hana_shirabe_web/request_context/member_auth.ex:228
 #: lib/hana_shirabe_web/request_context/member_auth.ex:300
 #, elixir-autogen, elixir-format
 msgid "You must log in to access this page."
-msgstr ""
+msgstr "このページにアクセスするにはログインが必要です"
 
 #: lib/hana_shirabe_web/request_context/member_auth.ex:246
 #, elixir-autogen, elixir-format
 msgid "You must re-authenticate to access this page."
-msgstr ""
+msgstr "このページにアクセスするには再認証が必要です"
 
 #: lib/hana_shirabe_web/live/member_live/profile.ex:23
 #: lib/hana_shirabe_web/live/member_live/registration.ex:89
 #, elixir-autogen, elixir-format
 msgid "Nickname"
-msgstr ""
+msgstr "ニックネーム"
 
 #: lib/hana_shirabe_web/live/member_live/registration.ex:93
 #, elixir-autogen, elixir-format
 msgid "Tell us how we should address you."
-msgstr ""
+msgstr "あなたの呼び名を教えてください"
 
 #: lib/hana_shirabe_web/live/member_live/registration.ex:103
 #, elixir-autogen, elixir-format
-msgid "Please enter your email address so we can contact you."
-msgstr ""
+msgid "Please enter your email so we can contact you."
+msgstr "連絡のためメールアドレスを入力してください"
 
 #: lib/hana_shirabe_web/live/member_live/profile.ex:15
 #, elixir-autogen, elixir-format
 msgid "Account Profile"
-msgstr ""
+msgstr "アカウントプロフィール"
 
 #: lib/hana_shirabe_web/live/member_live/profile.ex:16
 #, elixir-autogen, elixir-format
 msgid "Manage your your basic information."
-msgstr ""
+msgstr "基本情報を管理"
 
 #: lib/hana_shirabe_web/live/member_live/profile.ex:52
 #, elixir-autogen, elixir-format
-msgid "Dangerours Zone"
-msgstr ""
+msgid "Danger Zone"
+msgstr "危険ゾーン"
 
 #: lib/hana_shirabe_web/live/member_live/profile.ex:55
 #, elixir-autogen, elixir-format
 msgid "If you want to update your email address or password, please enter %{sensitive_settings}."
-msgstr ""
+msgstr "メールアドレスやパスワードを更新する場合は、%{sensitive_settings} に入ってください"
 
 #: lib/hana_shirabe_web/live/member_live/profile.ex:40
 #, elixir-autogen, elixir-format
 msgid "Introduction"
-msgstr ""
+msgstr "自己紹介"
 
 #: lib/hana_shirabe_web/live/member_live/profile.ex:48
 #, elixir-autogen, elixir-format
 msgid "Update Profile"
-msgstr ""
+msgstr "プロフィール更新"
 
 #: lib/hana_shirabe_web/live/member_live/profile.ex:46
 #, elixir-autogen, elixir-format
 msgid "Updating..."
-msgstr ""
+msgstr "更新中..."
 
 #: lib/hana_shirabe_web/live/member_live/registration.ex:33
 #, elixir-autogen, elixir-format
 msgid "Confirm"
-msgstr ""
+msgstr "確認"
 
 #: lib/hana_shirabe_web/live/member_live/login.ex:75
 #, elixir-autogen, elixir-format
 msgid "Send code"
-msgstr ""
+msgstr "コード送信"
 
 #: lib/hana_shirabe_web/live/member_live/login.ex:66
 #, elixir-autogen, elixir-format
 msgid "Verification Code"
-msgstr ""
+msgstr "認証コード"
 
 #: lib/hana_shirabe_web/live/member_live/registration.ex:36
 #, elixir-autogen, elixir-format
 msgid "You can use magic link to comfirm and login you account."
-msgstr ""
+msgstr "マジックリンクを使用してアカウント確認とログインができます"
 
 #: lib/hana_shirabe_web/live/member_live/login.ex:132
 #, elixir-autogen, elixir-format
 msgid "the mailbox page."
-msgstr ""
+msgstr "メールボックスページ"
