fix: merge inject scope and audit context together

--- a/apps/hana_shirabe/priv/gettext/ja/LC_MESSAGES/deliver.po
+++ b/apps/hana_shirabe/priv/gettext/ja/LC_MESSAGES/deliver.po
@@ -11,12 +11,12 @@ msgstr ""
 "Language: ja\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: lib/hana_shirabe/accounts/member_notifier.ex:112
+#: lib/hana_shirabe/accounts/member_notifier.ex:107
 #, elixir-autogen, elixir-format
 msgid "Confirmation instructions"
 msgstr "確認手順"
 
-#: lib/hana_shirabe/accounts/member_notifier.ex:78
+#: lib/hana_shirabe/accounts/member_notifier.ex:73
 #, elixir-autogen, elixir-format
 msgid "Log in instructions"
 msgstr "ログイン手順"
@@ -26,26 +26,28 @@ msgstr "ログイン手順"
 msgid "Update email instructions"
 msgstr "メールアドレス更新手順"
 
+#: lib/hana_shirabe/accounts/member_notifier.ex:74
+#, elixir-autogen, elixir-format
+msgid "\r\n==============================\r\n\r\nHi %{member_email},\r\n\r\nWelcome to Echoes Under Blossoms.\r\n\r\nPlease use the following code to complete your log in:\r\n\r\n%{code}\r\n\r\nAlternatively, you can sign in by visiting the link below:\r\n\r\n%{url}\r\n\r\nThis request is valid for 15 minutes. If you did not request this, please ignore this email.\r\n\r\n==============================\r\n"
+msgstr ""
+"==============================\n"
+"\n"
+"%{member_email} 様、\n"
+"\n"
+"「花影下の音符」へようこそ。\n"
+"\n"
+"ログインを完了するには、以下のリンクにアクセスしてサインインすることもできます：\n"
+"\n"
+"%{url}\n"
+"\n"
+"このリクエストは15分間有効です。このリクエストに心当たりがない場合は、このメールを無視してください。\n"
+"\n"
+"==============================\n"
+""
+
 #: lib/hana_shirabe/accounts/member_notifier.ex:37
 #, elixir-autogen, elixir-format
-msgid ""
-"==============================\n"
-"\n"
-"Hi %{member_email},\n"
-"\n"
-"Welcome to Echoes Under Blossoms.\n"
-"\n"
-"Please use the following code to change your email:\n"
-"\n"
-"%{code}\n"
-"\n"
-"Alternatively, you can sign in by visiting the link below:\n"
-"\n"
-"%{url}\n"
-"\n"
-"This request is valid for 15 minutes. If you did not request this, please ignore this email.\n"
-"==============================\n"
-""
+msgid "\r\n==============================\r\n\r\nHi %{member_email},\r\n\r\nWelcome to Echoes Under Blossoms.\r\n\r\nPlease visit the link below to change your email:\r\n\r\n%{url}\r\n\r\nThis request is valid for 15 minutes. If you did not request this, please ignore this email.\r\n==============================\r\n"
 msgstr ""
 "==============================\n"
 "\n"
@@ -53,51 +55,7 @@ msgstr ""
 "\n"
 "「花影下の音符」へようこそ。\n"
 "\n"
-"メールアドレスを変更するには、以下の確認コードをご利用ください：\n"
-"\n"
-"%{code}\n"
-"\n"
-"または、以下のリンクにアクセスして手続きを完了することもできます：\n"
-"\n"
-"%{url}\n"
-"\n"
-"このリクエストは15分間有効です。このリクエストに心当たりがない場合は、このメールを無視してください。\n"
-"==============================\n"
-""
-
-#: lib/hana_shirabe/accounts/member_notifier.ex:79
-#, elixir-autogen, elixir-format
-msgid ""
-"==============================\n"
-"\n"
-"Hi %{member_email},\n"
-"\n"
-"Welcome to Echoes Under Blossoms.\n"
-"\n"
-"Please use the following code to complete your log in:\n"
-"\n"
-"%{code}\n"
-"\n"
-"Alternatively, you can sign in by visiting the link below:\n"
-"\n"
-"%{url}\n"
-"\n"
-"This request is valid for 15 minutes. If you did not request this, please ignore this email.\n"
-"\n"
-"==============================\n"
-""
-msgstr ""
-"==============================\n"
-"\n"
-"%{member_email} 様、\n"
-"\n"
-"「花影下の音符」へようこそ。\n"
-"\n"
-"ログインを完了するには、以下の確認コードをご利用ください：\n"
-"\n"
-"%{code}\n"
-"\n"
-"または、以下のリンクにアクセスしてサインインすることもできます：\n"
+"手続きを完了するには、以下のリンクにアクセスしてください：\n"
 "\n"
 "%{url}\n"
 "\n"
@@ -106,23 +64,9 @@ msgstr ""
 "==============================\n"
 ""
 
-#: lib/hana_shirabe/accounts/member_notifier.ex:113
+#: lib/hana_shirabe/accounts/member_notifier.ex:108
 #, elixir-autogen, elixir-format
-msgid ""
-"==============================\n"
-"\n"
-"Hi %{member_email},\n"
-"\n"
-"Welcome to Echoes Under Blossoms.\n"
-"\n"
-"Please visit the link below:\n"
-"\n"
-"%{url}\n"
-"\n"
-"This request is valid for 15 minutes. If you did not request this, please ignore this email.\n"
-"\n"
-"==============================\n"
-""
+msgid "\r\n==============================\r\n\r\nHi %{member_email},\r\n\r\nWelcome to Echoes Under Blossoms.\r\n\r\nPlease visit the link below to confirm your account:\r\n\r\n%{url}\r\n\r\nThis request is valid for 15 minutes. If you did not request this, please ignore this email.\r\n\r\n==============================\r\n"
 msgstr ""
 "==============================\n"
 "\n"
