--- a/apps/hana_shirabe/priv/gettext/zh_Hans/LC_MESSAGES/deliver.po
+++ b/apps/hana_shirabe/priv/gettext/zh_Hans/LC_MESSAGES/deliver.po
@@ -11,12 +11,12 @@ msgstr ""
 "Language: zh_Hans\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: lib/hana_shirabe/accounts/member_notifier.ex:112
+#: lib/hana_shirabe/accounts/member_notifier.ex:107
 #, elixir-autogen, elixir-format
 msgid "Confirmation instructions"
 msgstr "邮件确认指示"
 
-#: lib/hana_shirabe/accounts/member_notifier.ex:78
+#: lib/hana_shirabe/accounts/member_notifier.ex:73
 #, elixir-autogen, elixir-format
 msgid "Log in instructions"
 msgstr "登录指示"
@@ -26,66 +26,9 @@ msgstr "登录指示"
 msgid "Update email instructions"
 msgstr "邮件更新指示"
 
-#: lib/hana_shirabe/accounts/member_notifier.ex:37
+#: lib/hana_shirabe/accounts/member_notifier.ex:74
 #, elixir-autogen, elixir-format
-msgid ""
-"==============================\n"
-"\n"
-"Hi %{member_email},\n"
-"\n"
-"Welcome to Echoes Under Blossoms.\n"
-"\n"
-"Please use the following code to change your email:\n"
-"\n"
-"%{code}\n"
-"\n"
-"Alternatively, you can sign in by visiting the link below:\n"
-"\n"
-"%{url}\n"
-"\n"
-"This request is valid for 15 minutes. If you did not request this, please ignore this email.\n"
-"==============================\n"
-""
-msgstr ""
-"==============================\n"
-"\n"
-"您好，%{member_email}，\n"
-"\n"
-"欢迎来到「花影下的音符」。\n"
-"\n"
-"请使用以下验证码来更改您的邮箱地址：\n"
-"\n"
-"%{code}\n"
-"\n"
-"或者，您也可以通过访问下方链接进行操作：\n"
-"\n"
-"%{url}\n"
-"\n"
-"此请求在 15 分钟内有效。如果您并未请求此操作，请忽略本邮件。\n"
-"==============================\n"
-""
-
-#: lib/hana_shirabe/accounts/member_notifier.ex:79
-#, elixir-autogen, elixir-format
-msgid ""
-"==============================\n"
-"\n"
-"Hi %{member_email},\n"
-"\n"
-"Welcome to Echoes Under Blossoms.\n"
-"\n"
-"Please use the following code to complete your log in:\n"
-"\n"
-"%{code}\n"
-"\n"
-"Alternatively, you can sign in by visiting the link below:\n"
-"\n"
-"%{url}\n"
-"\n"
-"This request is valid for 15 minutes. If you did not request this, please ignore this email.\n"
-"\n"
-"==============================\n"
-""
+msgid "\r\n==============================\r\n\r\nHi %{member_email},\r\n\r\nWelcome to Echoes Under Blossoms.\r\n\r\nPlease use the following code to complete your log in:\r\n\r\n%{code}\r\n\r\nAlternatively, you can sign in by visiting the link below:\r\n\r\n%{url}\r\n\r\nThis request is valid for 15 minutes. If you did not request this, please ignore this email.\r\n\r\n==============================\r\n"
 msgstr ""
 "==============================\n"
 "\n"
@@ -106,23 +49,9 @@ msgstr ""
 "==============================\n"
 ""
 
-#: lib/hana_shirabe/accounts/member_notifier.ex:113
+#: lib/hana_shirabe/accounts/member_notifier.ex:37
 #, elixir-autogen, elixir-format
-msgid ""
-"==============================\n"
-"\n"
-"Hi %{member_email},\n"
-"\n"
-"Welcome to Echoes Under Blossoms.\n"
-"\n"
-"Please visit the link below:\n"
-"\n"
-"%{url}\n"
-"\n"
-"This request is valid for 15 minutes. If you did not request this, please ignore this email.\n"
-"\n"
-"==============================\n"
-""
+msgid "\r\n==============================\r\n\r\nHi %{member_email},\r\n\r\nWelcome to Echoes Under Blossoms.\r\n\r\nPlease visit the link below to change your email:\r\n\r\n%{url}\r\n\r\nThis request is valid for 15 minutes. If you did not request this, please ignore this email.\r\n==============================\r\n"
 msgstr ""
 "==============================\n"
 "\n"
@@ -130,7 +59,26 @@ msgstr ""
 "\n"
 "欢迎来到「花影下的音符」。\n"
 "\n"
-"请访问下方的链接以完成操作：\n"
+"请访问下方的链接以更新邮件：\n"
+"\n"
+"%{url}\n"
+"\n"
+"此请求在 15 分钟内有效。如果您并未请求此操作，请忽略本邮件。\n"
+"\n"
+"==============================\n"
+""
+
+#: lib/hana_shirabe/accounts/member_notifier.ex:108
+#, elixir-autogen, elixir-format
+msgid "\r\n==============================\r\n\r\nHi %{member_email},\r\n\r\nWelcome to Echoes Under Blossoms.\r\n\r\nPlease visit the link below to confirm your account:\r\n\r\n%{url}\r\n\r\nThis request is valid for 15 minutes. If you did not request this, please ignore this email.\r\n\r\n==============================\r\n"
+msgstr ""
+"==============================\n"
+"\n"
+"您好，%{member_email}，\n"
+"\n"
+"欢迎来到「花影下的音符」。\n"
+"\n"
+"请访问下方的链接以确认账号：\n"
 "\n"
 "%{url}\n"
 "\n"
